cmake_minimum_required(VERSION 3.21)

project(Code1)
project(Code2)
project(Code3)
project(Code4)
project(Code5)
project(Code6)
project(Code7)
project(Code8)
project(Code9)
project(Code10)
project(Code11)
project(Code12)
project(Code13)
project(Code14)
project(Code15)
project(Code16)
project(Code17)
project(Code18)
project(Code19)


set(CMAKE_C_STANDARD 17)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "g++")


aux_source_directory(20220319/1 CFile1)
aux_source_directory(20220319/2 CFile2)
aux_source_directory(20220328/1 CFile3)
aux_source_directory(20220328/2 CFile4)
aux_source_directory(20220328/3 CFile5)
aux_source_directory(20220330/1 CFile6)
aux_source_directory(20220330/2 CFile7)
aux_source_directory(20220330/3 CFile8)
aux_source_directory(20220330/4 CFile9)
aux_source_directory(20220422/1 CFile10)
aux_source_directory(20220422/2 CFile11)
aux_source_directory(20220501/1 CFile12)
aux_source_directory(20220501/2 CFile13)
aux_source_directory(20220723/1 CFile14)
aux_source_directory(20220723/2 CFile15)
aux_source_directory(20220901/1 CFile16)
aux_source_directory(20220901/2 CFile17)
aux_source_directory(20220920/1 CFile18)
aux_source_directory(20230314/1 CFile19)


message(${CFile1})
message(${CFile2})
message(${CFile3})
message(${CFile4})
message(${CFile5})
message(${CFile6})
message(${CFile7})
message(${CFile8})
message(${CFile9})
message(${CFile10})
message(${CFile11})
message(${CFile12})
message(${CFile13})
message(${CFile14})
message(${CFile15})
message(${CFile16})
message(${CFile17})
message(${CFile18})
message(${CFile19})


add_executable(Code1 ${CFile1})
add_executable(Code2 ${CFile2})
add_executable(Code3 ${CFile3})
add_executable(Code4 ${CFile4})
add_executable(Code5 ${CFile5})
add_executable(Code6 ${CFile6})
add_executable(Code7 ${CFile7})
add_executable(Code8 ${CFile8})
add_executable(Code9 ${CFile9})
add_executable(Code10 ${CFile10})
add_executable(Code11 ${CFile11})
add_executable(Code12 ${CFile12})
add_executable(Code13 ${CFile13})
add_executable(Code14 ${CFile14})
add_executable(Code15 ${CFile15})
add_executable(Code16 ${CFile16})
add_executable(Code17 ${CFile17})
add_executable(Code18 ${CFile18})
add_executable(Code19 ${CFile19})
