# 设置 CMake 最低版本要求，当不满足时报错并停止构建
cmake_minimum_required(VERSION 3.21 FATAL_ERROR)

# 设置项目名字
project(sample_code)

# 寻找外部库路径
find_package(OpenCV REQUIRED)

# 设置 C/CPP 编译器以及标准版本
set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_C_STANDARD 17)
set(CMAKE_CXX_STANDARD 17)

# 找到源文件路径
aux_source_directory(20220319/1 source_file_1)
aux_source_directory(20220319/2 source_file_2)
aux_source_directory(20220328/1 source_file_3)
aux_source_directory(20220328/2 source_file_4)
aux_source_directory(20220328/3 source_file_5)
aux_source_directory(20220330/1 source_file_6)
aux_source_directory(20220330/2 source_file_7)
aux_source_directory(20220330/3 source_file_8)
aux_source_directory(20220330/4 source_file_9)
aux_source_directory(20220422/1 source_file_10)
aux_source_directory(20220422/2 source_file_11)
aux_source_directory(20220501/1 source_file_12)
aux_source_directory(20220501/2 source_file_13)
aux_source_directory(20220723/1 source_file_14)
aux_source_directory(20220723/2 source_file_15)
aux_source_directory(20220901/1 source_file_16)
aux_source_directory(20220901/2 source_file_17)
aux_source_directory(20220920/1 source_file_18)
aux_source_directory(20230314/1 source_file_19)
aux_source_directory(20230314/2 source_file_20)
aux_source_directory(20230314/3 source_file_21)
aux_source_directory(20230830/1 source_file_22)

# 输出源文件路径
message(${source_file_1})
message(${source_file_2})
message(${source_file_3})
message(${source_file_4})
message(${source_file_5})
message(${source_file_6})
message(${source_file_7})
message(${source_file_8})
message(${source_file_9})
message(${source_file_10})
message(${source_file_11})
message(${source_file_12})
message(${source_file_13})
message(${source_file_14})
message(${source_file_15})
message(${source_file_16})
message(${source_file_17})
message(${source_file_18})
message(${source_file_19})
message(${source_file_20})
message(${source_file_21})
message(${source_file_22})

# 编译得到可执行文件
add_executable(sample_code_1 ${source_file_1})
add_executable(sample_code_2 ${source_file_2})
add_executable(sample_code_3 ${source_file_3})
add_executable(sample_code_4 ${source_file_4})
add_executable(sample_code_5 ${source_file_5})
add_executable(sample_code_6 ${source_file_6})
add_executable(sample_code_7 ${source_file_7})
add_executable(sample_code_8 ${source_file_8})
add_executable(sample_code_9 ${source_file_9})
add_executable(sample_code_10 ${source_file_10})
add_executable(sample_code_11 ${source_file_11})
add_executable(sample_code_12 ${source_file_12})
add_executable(sample_code_13 ${source_file_13})
add_executable(sample_code_14 ${source_file_14})
add_executable(sample_code_15 ${source_file_15})
add_executable(sample_code_16 ${source_file_16})
add_executable(sample_code_17 ${source_file_17})
add_executable(sample_code_18 ${source_file_18})
add_executable(sample_code_19 ${source_file_19})
add_executable(sample_code_20 ${source_file_19})
add_executable(sample_code_21 ${source_file_21})
add_executable(sample_code_22 ${source_file_22})
target_link_libraries(sample_code_22 "${OpenCV_LIBS}")
